@@ -7,13 +7,20 @@ import java.security.PrivilegedAction;
 /**
  *Permissions fall into these categories: File, Socket, Net,
  * Security, Runtime, Property, AWT, Reflect, and Serializable
+ * 
+ * java command are by default not run with a SecurityManager installed
+ * 1.setSecurityManager method
+ * 2.-Djava.security.manager
  */
 public class App 
 {
     public static void main( String[] args )
     {
         
+        
         SecurityManager security = System.getSecurityManager();
+        
+        System.out.println(security.getClass());
         if (security != null) {
             //security.checkXXX(argument,  . . . );
             
